elimination and maybe page for planning permission

--- a/app/views/current/views/water/planning-permission.html
+++ b/app/views/current/views/water/planning-permission.html
@@ -25,25 +25,25 @@
             <br>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission" name="planning-permission" type="radio" value="not needed" {{ checked("planning-permission", "not needed") }}>
+                <input class="govuk-radios__input" id="planning-permission" name="planning-permission" type="radio" value="Not needed" {{ checked("planning-permission", "Not needed") }}>
                 <label class="govuk-label govuk-radios__label" for="planning-permission">
                   Not needed
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission-2" name="planning-permission" type="radio" value="secured" {{ checked("planning-permission", "secured") }}>
+                <input class="govuk-radios__input" id="planning-permission-2" name="planning-permission" type="radio" value="Secured" {{ checked("planning-permission", "Secured") }}>
                 <label class="govuk-label govuk-radios__label" for="planning-permission-2">
                   Secured
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="expected by 21 October 2021" {{ checked("planning-permission", "expected by 21 October 2021") }}>
+                <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="maybe" {{ checked("planning-permission", "maybe") }}>
                 <label class="govuk-label govuk-radios__label" for="planning-permission-3">
                   Expected to have by 31 December 2021
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="won’t have by 21 October 2021" {{ checked("planning-permission", "won’t have by 21 October 2021") }}>
+                <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="No" {{ checked("planning-permission", "No") }}>
                 <label class="govuk-label govuk-radios__label" for="planning-permission-3">
                   Will not have by 31 December 2021
                 </label>
