--- a/app/views/v5/views/water/planning-progress-condition.html
+++ b/app/views/v5/views/water/planning-progress-condition.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="planning-progress">Back</a>
+  <a class="govuk-back-link" href="planning-permission">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -21,7 +21,7 @@
 
       <p>Find out if the project will have planning permission in the next six months. Planning applications can take years.</p>
 
-      <form class="form" action="../water/abstraction-required" method="post">
+      <form class="form" action="../water/abstraction-licence" method="post">
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
