--- a/app/views/current/views/guidance/water.html
+++ b/app/views/current/views/guidance/water.html
@@ -36,12 +36,12 @@
 <p>The minimum grant you can claim is £35,000 (40% of £87,500). The maximum grant is £1 million.</p>
 
 <h2 id="when-to-apply">When to apply</h2>
-<table class="govuk-table ">
+<table class="govuk-table govuk-body">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
       <th scope="col" class="govuk-table__header govuk-!-width-one-half">Grant stage</th>
-      <th scope="col" class="govuk-table__header govuk-!-width-one-half">Opens</th>
-      <th scope="col" class="govuk-table__header govuk-!-width-one-half">Closes</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Opens</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Closes</th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
