--- a/app/views/current/views/water/reference-number.html
+++ b/app/views/current/views/water/reference-number.html
@@ -19,7 +19,7 @@
     <br>
     <div class="govuk-body govuk-!-padding-top-7">
       <p>You will get an email with a record of your answers.</p>
-      <p>If you do not get an email within 72 hours, please call the RPA helpline:</p>
+      <p>If you do not get an email within 72 hours, please call the RPA helpline and follow the options for the Farming Transformation Fund scheme:</p>
       <p class="govuk-body govuk-!-font-weight-bold">Telephone: 03000 200 301</p>
       <p>Monday to Friday, 9am to 5pm (except public holidays)</p>
       <a href="#" class="govuk-link">Find out about call charges</a>
