--- a/app/views/current/views/water/your-details.html
+++ b/app/views/current/views/water/your-details.html
@@ -41,7 +41,7 @@
                     <label class="govuk-label" for="agent-email">
                         Email address
                         <div id="event-name-hint" class="govuk-hint">
-                            We'll only use this to send you confirmation
+                            We'll use this to send you confirmation
                         </div>
                     </label>
                     <input class="govuk-input  govuk-!-width-two-thirds" id="agent-email" name="agent-email" type="agent-email" spellcheck="false" aria-describedby="agent-email-hint" autocomplete="agent-email" value="{{ data['agent-email'] }}">
