--- a/app/views/current/views/water/planning-required-condition.html
+++ b/app/views/current/views/water/planning-required-condition.html
@@ -16,9 +16,8 @@
         <h1 class="govuk-heading-l">
           You may be able to apply for a grant from this scheme
         </h1>
-        <p>Check with your local planning authority</p>
-
-        <p>Find out if the project will have planning permission in the next six months. Planning applications can take years.</p>
+      
+        <p>Any planning permission must be in place by 31 December 2021 (the end of the application window).</p>
 
             <form class="form" action="../water/abstraction-licence" method="post">
 
