changed the question

--- a/app/views/current/views/water/applying.html
+++ b/app/views/current/views/water/applying.html
@@ -17,7 +17,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Are you a farmer or an agent?
+                Who is applying for this grant?
               </h1>
             </legend>
             <br><br>
