project summary changes

--- a/app/views/current/views/water/project-summary.html
+++ b/app/views/current/views/water/project-summary.html
@@ -14,11 +14,10 @@
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
         <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 12 of 18 </span>
-        <h1 class="govuk-heading-l">Project details</h1>
+        <h1 class="govuk-heading-l">What impact will the project have? </h1>
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <p><span class="govuk-caption-m">Select one or two options</span></p>
-            <h2 class="govuk-heading-m">The project will:</h2>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="project-summary-1" name="project-summary" type="checkbox" value="Change water source" {{ checked("project-summary", "Change water source") }}>
