--- a/app/views/current/views/guidance/water.html
+++ b/app/views/current/views/guidance/water.html
@@ -21,7 +21,7 @@
 
 <h2 id="what-the-grant-is-for">What the grant is for</h2>
 
-<p>The Farming Transformation Fund water grant is to make more efficient use of water for irrigation and to secure water supplies for crops.</p>
+<p>The Farming Transformation Fund water management grant  is to make more efficient use of water for irrigation and to secure water supplies for crops.</p>
 <p>The grant can pay up to 40% of the costs for:</p>
 
 <ul>
