--- a/app/views/current/views/layouts/GUIDANCEWATER.html
+++ b/app/views/current/views/layouts/GUIDANCEWATER.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block pageTitle %}
-Large grants for water resource management projects - GOV.UK
+Check if you can apply for a Farming Transformation Fund water management grant 
 {% endblock %}
 
 {% block header %}
@@ -50,7 +50,7 @@ Large grants for water resource management projects - GOV.UK
         Guidance
       </p>
       <h1 class="gem-c-title__text gem-c-title__text--long">
-        Farming Transformation Fund water grant
+        Farming Transformation Fund water management grant 
       </h1>
     </div>
 
