--- a/app/views/current/views/water/water-SSSI.html
+++ b/app/views/current/views/water/water-SSSI.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="../water/abstraction-licence">Back</a>
+  <a class="govuk-back-link" href="{{ backUrl }}"> Back</a>
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,6 @@
     <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-            <span class="govuk-caption-m govuk-!-padding-bottom-1">Question 11 of 18 </span>
             <h1 class="govuk-fieldset__heading">
                 Does the project directly impact a Site <br> of Special Scientific Interest?
             </h1>
