--- a/app/views/current/views/water/legal-status.html
+++ b/app/views/current/views/water/legal-status.html
@@ -126,7 +126,7 @@
     <div class="govuk-grid-column-one-third govuk-!-padding-top-9">
       <aside class="app-related-items">
         <h3 class="govuk-heading-m">Eligibility</h3>
-          You can apply if you are a:
+          <p class="govuk-body">You can apply if you are a:</p>
                     <ul class="govuk-list govuk-list--bullet">
                       <li>Sole trader</li>
                       <li>Partnership</li>
