--- a/app/views/current/views/water/planning-permission.html
+++ b/app/views/current/views/water/planning-permission.html
@@ -50,8 +50,8 @@
             </div>
           </fieldset>
         </div>
-
-        <button class="govuk-button govuk-!-margin-right-1 govuk-!-margin-top-5" data-module="govuk-button">Continue</button>
+        <br/><br/>
+        <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
         {% if data['COMPLETED'] == true %}
           <button onclick="document.getElementById('mainForm').action='{{ completedUrl }}'"
             class="govuk-button govuk-!-margin-right-1" data-module="govuk-button"
