--- a/app/views/current/views/water/legal-status.html
+++ b/app/views/current/views/water/legal-status.html
@@ -126,9 +126,8 @@
     <div class="govuk-grid-column-one-third govuk-!-padding-top-9">
       <aside class="app-related-items">
         <h3 class="govuk-heading-m">Eligibility</h3>
-        <div class="govuk-body govuk-!-font-size-19">  
-          You can apply if you are a:
-                    <ul>
+          <p class="govuk-body">You can apply if you are a:</p>
+                    <ul class="govuk-list govuk-list--bullet">
                       <li>Sole trader</li>
                       <li>Partnership</li>
                       <li>Limited company</li>
@@ -143,7 +142,6 @@
                       <li>Co-operative society (Co-Op)</li>
                       <li>Community benefit society (BenCom)</li>
                     </ul>
-        </div> 
       </aside>     
     </div>
   </div>
