--- a/app/views/current/views/water/remaining-costs.html
+++ b/app/views/current/views/water/remaining-costs.html
@@ -56,9 +56,8 @@ Meeting the remaining project costs
       <aside class="app-related-items">
         <h3 class="govuk-heading-m">Eligibility</h3>
         <div class="govuk-body govuk-!-font-size-19">  
-            <p> You cannot use public money (for example grant funding from government or local authorities) towards the project costs. <br>
-            You can use loans, overdrafts and certain other grants, such as the Basic Payment Scheme or agri-environment schemes such as the Countryside Stewardship Scheme.
-            </p>  
+            <p>You cannot use public money (for example grant funding from government or local authorities) towards the project costs.</p> 
+            <p>You can use loans, ove   rdrafts and certain other grants, such as the Basic Payment Scheme or agri-environment schemes such as the Countryside Stewardship Scheme.</p> 
         </div> 
       </aside>         
     </div>
