--- a/app/views/current/views/water/legal-status-fail.html
+++ b/app/views/current/views/water/legal-status-fail.html
@@ -20,14 +20,13 @@
       <p class="govuk-body">This is only open to a business with a legal status of:</p>
 
         <ul class="govuk-list govuk-list--bullet">
-          <li>Charity</li>
-          <li>Community interest organisation</li>
-          <li>Limited company</li>
-          <li>Limited liability partnership</li>
-          <li>Partnership</li>
-          <li>Public organisation</li>
           <li>Sole trader</li>
+          <li>Partnership</li>
+          <li>Limited company</li>
+          <li>Charity</li>
           <li>Trust</li>
+           <li>Limited liability partnership</li>
+          <li>Community interest company</li>
           <li>Limited partnership</li>
           <li>Industrial and provident society</li>
           <li>Co-operative society (Co-Op)</li>
