--- a/app/views/current/views/water/irrigation-water-source.html
+++ b/app/views/current/views/water/irrigation-water-source.html
@@ -132,6 +132,11 @@
                     <li>improve the environment</li>
                     <li>improve water sustainability</li>
                    </ul>
+            RPA will not fund projects where water is supplied by:    
+                  <ul>
+                    <li>summer water surface abstraction</li>
+                    <li>mains</li>
+                  </ul>     
         </div>         
       </aside>   
   </div>
