--- a/app/views/current/views/water/legal-status.html
+++ b/app/views/current/views/water/legal-status.html
@@ -47,12 +47,6 @@
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-5" name="legal-status" type="radio" value="Public organisation" {{ checked("legal-status", "Public organisation") }}>
-                <label class="govuk-label govuk-radios__label" for="legal-status-5">
-                  Public organisation
-                </label>
-              </div>
-              <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="legal-status-6" name="legal-status" type="radio" value="Trust" {{ checked("legal-status", "Trust") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-6">
                   Trust
@@ -68,12 +62,6 @@
                 <input class="govuk-radios__input" id="legal-status-8" name="legal-status" type="radio" value="Community interest organisation" {{ checked("legal-status", "Community interest organisation") }}>
                 <label class="govuk-label govuk-radios__label" for="legal-status-8">
                   Community interest organisation
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="legal-status-9" name="legal-status" type="radio" value="Local authority" {{ checked("legal-status", "Local authority") }}>
-                <label class="govuk-label govuk-radios__label" for="legal-status-9">
-                  Local authority
                 </label>
               </div>
               <div class="govuk-radios__item">
@@ -126,22 +114,7 @@
     <div class="govuk-grid-column-one-third govuk-!-padding-top-9">
       <aside class="app-related-items">
         <h3 class="govuk-heading-m">Eligibility</h3>
-          <p class="govuk-body">You can apply if you are a:</p>
-                    <ul class="govuk-list govuk-list--bullet">
-                      <li>Sole trader</li>
-                      <li>Partnership</li>
-                      <li>Limited company</li>
-                      <li>Charity</li>
-                      <li>Public organisation</li>
-                      <li>Trust</li>
-                      <li>Limited liability partnership</li>
-                      <li>Community interest company  </li>
-                      <li>Local authority </li>
-                      <li>Limited partnership</li>
-                      <li>Industrial and provident society</li>
-                      <li>Co-operative society (Co-Op)</li>
-                      <li>Community benefit society (BenCom)</li>
-                    </ul>
+          <p class="govuk-body">Public organisations and local authorities cannot apply for this grant.</p>
       </aside>     
     </div>
   </div>
