fix guidance page for /current

--- a/app/views/water/current/guidance.html
+++ b/app/views/water/current/guidance.html
@@ -1,5 +1,5 @@
 
-{% extends "../layouts/GUIDANCEWATER.html" %}
+{% extends "./views/layouts/GUIDANCEWATER.html" %}
 
 {% block guidance %}
 
@@ -75,7 +75,7 @@
 
 <h2 id="how-to-apply-for-a-grant">How to apply for a grant</h2>
 <h3>Check if your project can apply for a grant</h3>
-<p class="govuk-!-padding-top-3">You need to <a href="../water/start">check if you’re eligible and how well your project fits the funding priorities.</a></p>
+<p class="govuk-!-padding-top-3">You need to <a href="./views/water/start">check if you’re eligible and how well your project fits the funding priorities.</a></p>
 <p>You’ll need:</p>
 <ul>
   <li>information about your business (for example number of employees, turnover)</li>
