--- a/app/views/water/index.html
+++ b/app/views/water/index.html
@@ -19,7 +19,7 @@
       </h1>
 
       <dl class="govuk-list">
-        <dt><a href="/water/current/views/guidance/water">Version 07</a></dt>
+        <dt><a href="/water/current/guidance">Version 07</a></dt>
         <dd>Beta - Public</dd>
       </dl>
 
