fix guidance pages in /v7-privateBeta

--- a/app/views/water/v7-privateBeta/guidance-large-water.html
+++ b/app/views/water/v7-privateBeta/guidance-large-water.html
@@ -1,5 +1,5 @@
 
-{% extends "../layouts/GUIDANCEWATER.html" %}
+{% extends "./views/layouts/GUIDANCEWATER.html" %}
 
 {% block guidance %}
 
@@ -71,7 +71,7 @@
 </ul>
 <br/>
 <p>
-<a href="../water/start">Check if you can apply and how well your project fits the funding priorities.</a>
+<a href="./views/water/start">Check if you can apply and how well your project fits the funding priorities.</a>
 </p>
 
 
