--- a/app/views/water/v7-privateBeta/guidance-all-grants.html
+++ b/app/views/water/v7-privateBeta/guidance-all-grants.html
@@ -1,5 +1,5 @@
 
-{% extends "../layouts/GUIDANCEALL.html" %}
+{% extends "./views/layouts/GUIDANCEALL.html" %}
 
 {% block guidance %}
 
@@ -19,13 +19,13 @@ Funding for farmers, woodland owners, foresters and land managers to help them l
 <p><a href="https://www.gov.uk/government/collections/environmental-stewardship-guidance-and-forms-for-existing-agreement-holders">Environmental Stewardship</a><br>
 Funding for farmers and land managers who manage their land in a way that protects and helps the environment and wildlife.</p>
 
-<p><a href="small-grants">Grants for equipment to improve productivity</a><br>
+<p>Grants for equipment to improve productivity<br>
 Up to £12,000 to help farmers buy specific equipment.</p>
 
-<p><a href="large-water">Grants for water resource management projects</a><br>
+<p><a href="guidance-large-water">Grants for water resource management projects</a><br>
 Up to £1 million towards reservoirs and irrigation projects.</p>
 
-<p><a href="large-slurry">Grants for slurry equipment</a><br>
+<p>Grants for slurry equipment<br>
 Up to £1 million towards specific equipment that makes more efficient use of slurry, manure and digestate.</p>
 
 <p><a href="https://www.gov.uk/government/publications/rdpe-growth-programme">RDPE Growth Programme</a><br>
