--- a/app/views/water/v4/guidance-large-water.html
+++ b/app/views/water/v4/guidance-large-water.html
@@ -1,5 +1,5 @@
 
-{% extends "../layouts/GUIDANCEWATER.html" %}
+{% extends "./views/layouts/GUIDANCEWATER.html" %}
 
 {% block guidance %}
 
@@ -49,6 +49,6 @@
 
 </div>
 
-<p><a class="gem-c-button govuk-button govuk-button--start govuk-!-margin-top-4 govuk-!-margin-bottom-9" role="button" href="../water/start"> Check if you can apply now</a></p>
+<p><a class="gem-c-button govuk-button govuk-button--start govuk-!-margin-top-4 govuk-!-margin-bottom-9" role="button" href="./views/water/start"> Check if you can apply now</a></p>
 
 {% endblock %}
